--- a/resources/css/zoom-control.css
+++ b/resources/css/zoom-control.css
@@ -37,7 +37,7 @@
     background-image: none;
     background-color: rgba(230,230,230,1);
     color: black;
-    border: 2px solid rgba(0,0,0,1);;
+    border: 2px solid rgba(0,0,0,1);
     border-radius: 0.2em;
     -moz-border-radius-bottomleft: 0.2em;
     -webkit-border-bottom-left-radius: 0.2em;
